# iron-os

./: .config  .gitignore  .prettierrc  Cargo.toml  INSTALL.md  README.md  for_vb.sh  notes.txt  pub.sh  riji.rhai
.github/workflows/: ci.yaml  docs.yaml
board/custom_x64/: device_table.mk  genimage-efi.cfg  grub-efi.cfg  in-fakeroot.sh  post-build.sh  riji.rhai  users_table.mk  weston.ini
board/custom_x64/data/home/: home_data.txt
board/custom_x64/dbus/: dbus.service  dbus.socket
board/custom_x64/pam.d/: sudo
board/custom_x64/rootfs/: fstab
buildroot/: .config  .gitignore  CHANGELOG.md  README.md  package.rhai  package.toml  packages.toml  riji.rhai
buildroot/board/common/: buildroot.config  linux.config  riji.rhai
buildroot/board/common-headless/: buildroot.config  cmdline-rpi.cfg  debug-buildroot.config  debug-linux.config  device_table.mk  extlinux-uboot.cfg  genimage-efi.cfg  genimage-uboot.cfg  grub-efi.cfg  linux.config  riji.rhai  users_table.mk
buildroot/board/common-headless/package/: Config.in  external.desc  external.mk
buildroot/board/common-headless/package/noto-emoji/: Config.in  noto-emoji.hash  noto-emoji.mk
buildroot/board/common-headless/package/service-bootloader/: Config.in  service-bootloader.mk
buildroot/board/common-headless/package/weston/: weston.hash  weston.mk
buildroot/board/common-headless/patches/grub2/: 01-remove-boottext.patch
buildroot/board/common-headless/patches/linux/: 01-add-v3d-with-bcm2835.patch
buildroot/board/common-headless/patches/python-glslang/: 01-new-gcc.patch
buildroot/board/common-headless/pre-patches/: gcc-copy-more-libs.patch  mesa3d-update.patch  pi5-support.patch  pipewire-build-fails-with-vulkan.patch  psplash.patch  remove-opencl.patch  rtl8188eu.patch  rust-1.74.patch  rust-1.86.patch  update-rust-1.64.patch  update-rust-1.71.patch  update-wayland.patch  wayland-protocols.patch  wayland.patch  weston-kiosk-sleep.patch
buildroot/board/common-headless/rootfs/: NetworkManager.conf  chromium.service  fstab  service-bootloader.service  subprocess.service  weston-debug.service  weston.service
buildroot/board/common-headless/rootfs/pam.d/: chromium  login
buildroot/board/common-headless/scripts/: fakeroot.sh  post-build.sh  post-image.sh
buildroot/board/custom_x64/: buildroot.config  debug-buildroot.config  device_table.mk  fakeroot.sh  genimage-efi.cfg  grub-efi.cfg  linux.config  post-image.sh  riji.rhai  users_table.mk
buildroot/board/custom_x64/rootfs/: chromium.service  fstab  service-bootloader.service  subprocess.service  weston.service
buildroot/board/intel/: buildroot.config  linux.config  riji.rhai
buildroot/board/intel-headless/: buildroot.config  riji.rhai
buildroot/board/pi4/: buildroot.config  linux.config  riji.rhai
buildroot/board/pi4-headless/: buildroot.config  config.txt  genimage-uboot.cfg  riji.rhai  uboot.cfg
buildroot/board/pi5/: buildroot.config  linux.config  riji.rhai
buildroot/board/pi5-headless/: buildroot.config  config.txt  genimage-boot.cfg  genimage-uboot.cfg  riji.rhai  uboot.cfg
buildroot/docker/: Dockerfile
chromium/: .gitignore  README.md  args_list.txt  package.rhai  package.toml  pub.sh  riji.rhai  run_chrome.sh
chromium/args/: Release.gn  amd64.gn  arm64.gn  debug.gn  default.gn  release.gn
chromium/patches/: all.patch  breakpad.patch  devtools-frontend.patch  disable-atk.patch  ffmpeg.patch  native-client.patch  skia.patch  v8.patch  widevine.patch
docs/: .gitignore  WESTON_DEV.md  index.md  package-lock.json  package.json  testing.md
docs/.vitepress/: config.mts
docs/docs/getting-started/: introduction.md  requirements.md
docs/docs/setup/: first-build.md  packages.md
example-binary/: Cargo.toml  README.md  package.rhai  package.toml
example-binary/src/: main.rs  service_api.rs
file-db/: .gitignore  Cargo.toml
file-db/src/: lib.rs
file_db/: Cargo.toml
firefox/: .gitignore  package.rhai  package.toml  riji.rhai
firefox/configs/: default
packages-api/: Cargo.toml  README.md
packages-api/src/: action.rs  auth.rs  client.rs  error.rs  lib.rs  message.rs  packages.rs  request.rs  requests.rs  server.rs
packages-api/src/requests/: macros.rs  mod.rs
packages-publisher/: Cargo.toml
packages-publisher/src/: auth.rs  change_whitelist.rs  config.rs  download.rs  error.rs  get_file.rs  info.rs  main.rs  pack_image.rs  script.rs  upload.rs  util.rs
packages-server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.example.yaml  riji.rhai
packages-server/src/: auth.rs  config.rs  error.rs  files.rs  main.rs  packages.rs  server.rs  testing_requests.rs
service/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  debug_chromium.sh  package.rhai  package.toml  pub.sh  pub_test.sh  riji.rhai  update.sh  weston-kiosk-shell.xml  weston-output-capture.xml
service-api/: Cargo.toml  README.md
service-api/src/: client.rs  error.rs  lib.rs  message.rs  server.rs
service-api/src/requests/: device.rs  macros.rs  mod.rs  network.rs
service-bootloader/: Cargo.toml  README.md  pub.sh  pub_test.sh  run_root.sh
service-bootloader-api/: Cargo.toml
service-bootloader-api/src/: async.rs  error.rs  lib.rs  macros.rs  requests.rs  server.rs
service-bootloader/src/: command.rs  disks.rs  fix_10.rs  hardware_fixes.rs  main.rs  service.rs  util.rs  version_info.rs
service/extension/: background.html  background.js  content.js  manifest.json  ws.js
service/src/: bootloader.rs  context.rs  main.rs  util.rs
service/src/api/: device_info.rs  mod.rs  network_manager.rs
service/src/display/: capture.rs  capture_api.rs  kiosk_api.rs  mod.rs
service/src/subprocess/: mod.rs  start_process.templ
service/src/ui/: chromium.rs  mod.rs  start_chrome.templ  start_firefox.templ  ws.rs  ws_api.rs
service/www/: index.html
service/www/css/: style.css
service/www/js/: connection.js  install.js  landing.js  main.js  util.js  websocket.js
service/www/mgcss/: style.mgcss
stdio-api/: Cargo.toml
stdio-api/src/: async.rs  lib.rs  serde.rs  sync.rs
ws-api/: Cargo.toml
ws-api/src/: lib.rs
(+13 files in other folders)
