[package]
name = "example-binary"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }
service-api = { package = "iron-os-service-api", version = "0.2" }
clap = { version = "4.0", features = ["derive"] }
