[package]
name = "file-db"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
async = ["tokio"]

[dependencies]
tokio = { version = "1.0", features = ["fs"], optional = true }
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["fs", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }