[package]
name = "iron-os-file-db"
description = "Iron OS File DB"
version = "0.2.0"
authors = ["Sören meier <info@soerenmeier.ch>"]
repository = "https://github.com/iron-os/iron-os"
edition = "2018"
license = "MIT OR Apache-2.0"

[features]
async = ["tokio"]

[dependencies]
tokio = { version = "1.0", features = ["fs"], optional = true }
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["fs", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }