[package]
name = "packages-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["net", "io-util", "time", "fs"] }
stream = { package = "fire-stream", version = "0.2.7", features = ["json", "fs", "encrypted"] }
stream-api = { package = "fire-stream-api", version = "0.1.2", features = ["encrypted"] }
bytes = { package = "simple-bytes", version = "0.2.6" }
serde = { version = "1.0", features = ["derive"] }
crypto = { package = "fire-crypto", version = "0.3.4", features = ["signature", "serde", "b64", "hash"] }
rand = "0.8"
base64 = "0.13"

[dev-dependencies]
tokio = { version = "1.0", features = ["net", "io-util", "rt-multi-thread", "time", "macros", "sync"] }