[package]
name = "packages-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["net", "io-util", "time", "fs"] }
stream = { package = "fire-stream", version = "0.4.0", features = ["json", "fs", "encrypted"] }
stream-api = { package = "fire-stream-api", version = "0.3.0", features = ["encrypted", "json"] }
bytes = { package = "simple-bytes", version = "0.2.11" }
serde = { version = "1.0", features = ["derive"] }
crypto = { package = "fire-crypto", version = "0.4.0", features = ["signature", "serde", "b64", "hash"] }
rand = "0.8"
base64 = "0.21"

[dev-dependencies]
tokio = { version = "1.0", features = ["net", "io-util", "rt-multi-thread", "time", "macros", "sync"] }