[package]
name = "iron-os-packages-api"
description = "Iron OS Packages Api"
version = "0.1.0"
authors = ["Sören Meier <info@soerenmeier.ch>"]
repository = "https://github.com/iron-os/iron-os"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.0", features = ["net", "io-util", "time", "fs"] }
stream = { package = "fire-stream", version = "0.4.2", features = ["json", "fs", "encrypted"] }
stream-api = { package = "fire-stream-api", version = "0.3.3", features = ["encrypted", "json"] }
bytes = { package = "simple-bytes", version = "0.2.11" }
serde = { version = "1.0", features = ["derive"] }
crypto = { package = "fire-crypto", version = "0.4.0", features = ["signature", "serde", "b64", "hash"] }
rand = "0.8"
base64 = "0.21"
semver = { version = "1.0.27", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["net", "io-util", "rt-multi-thread", "time", "macros", "sync"] }
