[package]
name = "packages-publisher"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
riji = "0.1.6"
packages = { package = "packages-api", version = "0.1", path = "./../packages-api" }
crypto = { package = "fire-crypto", version = "0.3" }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
file-db = { version = "0.1", features = ["async"], path = "./../file-db" }
bootloader-api = { package = "service-bootloader-api", version = "0.2", path = "./../service-bootloader-api" }