[package]
name = "packages-server"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs"] }
packages = { package = "packages-api", version = "0.1", path = "./../packages-api" }
serde = { version = "1.0", features = ["derive"] }
file-db = { version = "0.1", features = ["async"], path = "./../file-db" }
crypto = { package = "fire-crypto", version = "0.3", features = ["cipher", "signature", "serde", "b64"] }
toml = "0.5"
clap = { version = "3.0.10", features = ["derive"] }
stream-api = { package = "fire-stream-api", version = "0.1.2", features = ["encrypted"] }