[package]
name = "packages-server"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs"] }
packages = { package = "iron-os-packages-api", version = "0.1", path = "../packages-api" }
serde = { version = "1.0", features = ["derive"] }
file-db = { package = "iron-os-file-db", version = "0.2", features = ["async"] }
crypto = { package = "fire-crypto", version = "0.4", features = [
    "cipher",
    "signature",
    "serde",
    "b64",
] }
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }
stream-api = { package = "fire-stream-api", version = "0.3.3", features = [
    "encrypted",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sentry = "0.32.2"
sentry-tracing = "0.32.2"
time = "=0.3.35"
semver = { version = "1.0.27", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
