[package]
name = "iron-os-service-api"
description = "Iron OS Packages Api"
version = "0.3.2"
authors = ["Sören Meier <info@soerenmeier.ch>"]
repository = "https://github.com/iron-os/iron-os"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.0", features = ["net", "io-util", "time", "fs"] }
stream = { package = "fire-stream", version = "0.4.3", features = [
    "json",
    "fs",
] }
stream-api = { package = "fire-stream-api", version = "0.3.4", features = ["json"] }
bytes = { package = "simple-bytes", version = "0.2.6" }
serde = { version = "1.0", features = ["derive"] }
packages-api = { package = "iron-os-packages-api", version = "0.1", path = "./../packages-api" }

[dev-dependencies]
tokio = { version = "1.0", features = [
    "net",
    "io-util",
    "rt-multi-thread",
    "time",
    "macros",
    "sync",
] }
