[package]
name = "service-bootloader-api"
version = "0.1.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
async = ["stdio-api/async"]


[dependencies]
serde = { version = "1.0", features = ["derive"] }
stdio-api = { version = "0.1", path = "./../stdio-api", features = ["serde"] }
crypto = { package = "fire-crypto", version = "0.2", features = ["signature", "hash", "b64", "serde"] }