[package]
name = "service-bootloader-api"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
async = ["stdio-api/async"]
# prints protocol lines to stderr
debug = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
stdio-api = { version = "0.1", path = "./../stdio-api", features = ["serde"] }
crypto = { package = "fire-crypto", version = "0.3", features = ["signature", "hash", "b64", "serde"] }