[package]
name = "service_bootloader"
version = "0.2.0"
edition = "2021"

[features]
headless = []
image-debug = []

[profile.release]
lto = true

[dependencies]
file-db = { version = "0.1", path = "./../file-db" }
serde = { version = "1.0", features = ["derive"] }
linux-info = "0.1.8"
gpt = { version = "3.0", git = "https://github.com/soerenmeier/gpt", branch = "tmp_master" }
uuid = "0.8"
bootloader-api = { package = "service-bootloader-api", version = "0.2", path = "./../service-bootloader-api" }
libc = "0.2"