[package]
name = "service_bootloader"
version = "0.2.0"
edition = "2021"

[features]
headless = []
image-debug = []

[profile.release]
lto = true

[dependencies]
file-db = { package = "iron-os-file-db", version = "0.2" }
serde = { version = "1.0", features = ["derive"] }
linux-info = "0.1.8"
gpt = "4.0.0-rc.2"
uuid = "1.3"
stdio-api = { version = "0.1", path = "./../stdio-api", features = ["serde"] }
bootloader-api = { package = "service-bootloader-api", version = "0.2", path = "./../service-bootloader-api" }
libc = "0.2"
rand = "0.8"
thiserror = "1.0"
