[package]
name = "service"
version = "1.0.1"
edition = "2021"

[profile.release]
lto = true

[dependencies]
tokio = { version = "1.0", features = [
    "time",
    "macros",
    "rt-multi-thread",
    "fs",
] }
bootloader-api = { package = "service-bootloader-api", version = "0.2", features = [
    "async",
], path = "./../service-bootloader-api" }
fire = { package = "fire-http", version = "0.2", features = [
    "fs",
    "json",
    "ws",
] }
stream-api = { package = "fire-stream-api", version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
file-db = { package = "iron-os-file-db", version = "0.2", features = ["async"] }
packages = { package = "iron-os-packages-api", version = "0.1", path = "./../packages-api" }
rand = "0.8"
api = { package = "iron-os-service-api", version = "0.3", path = "../service-api" }
# display
wayland-client = "0.29"
wayland-commons = "0.29"
linux-info = "0.1.9"
dbus = "0.9"
nmdbus = "1.16"
uuid = { version = "1.2", features = ["v4"] }

[build-dependencies]
wayland-scanner = "0.29"
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
