[package]
name = "stdio-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
async = ["tokio"]
serde = ["_serde", "serde_json"]

[dependencies]
tokio = { version = "1.0", features = ["io-util", "io-std", "process"], optional = true }
_serde = { package = "serde", version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["io-util", "io-std", "process"] }