[package]
name = "ws-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["sync"] }
fire = { package = "fire-http", version = "0.2", path = "./../../fire-http", features = ["json", "ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"